# rust-project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
config/: log4rs.yaml
gui-app/: Cargo.toml
gui-app/src/: main.rs  util.rs
server-library/: Cargo.toml
server-library/src/: audio.rs  database.rs  interface.rs  lib.rs  network.rs  utils.rs
server-library/src/network/: handshake.rs  music_exchange.rs  notification.rs  request.rs  response.rs
shell-app/: Cargo.toml
shell-app/src/: main.rs  shell.rs  util.rs
src/: audio.rs  constants.rs  database.rs  interface.rs  lib.rs  main.rs  network.rs  shell.rs  utils.rs
src/audio/: mod.rs
src/network/: handshake.rs  mod.rs  music_exchange.rs  notification.rs  peer.rs  request.rs  send_request.rs
