[package]
name = "kvd-rust"
version = "0.1.0"
authors = ["Marcel Baur <mail@marcelbaur.io>", "Fabian Frey <mail@fabianfrey.de>", "Elena Liebl <elena_liebl@web.de>", "Franziska Lang <franziska@langfeldafing.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
get_if_addrs = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"