[package]
name = "MEFF"
version = "0.1.0"
authors = ["Fabian Frey <fabian@appdafuer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies]
gdk = "^0"
glib-sys = "^0"
glib = "^0"