[package]
name = "shell-app"
version = "0.1.0"
authors = ["Elena <liebl@cip.ifi.lmu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meff = {path="../"}
clap = "2.33.0"
prettytable-rs = "^0.8"
colored = "1.9.2"
log4rs = "0.9.0"
log = "0.4.8"
